Replaced deprecated constructors with valueOf() equivalents.