@@ -35,7 +35,7 @@ public class LinkSubmitDemo
     
     public Object[] getFormContext()
     {
-        return new Object[]{new Integer(7), new Double(3.14159)};
+        return new Object[]{Integer.valueOf(7), Double.valueOf(3.14159)};
      }
 
     void onSelectedFromFred(Integer first, Double second) 
